@@ -1,5 +1,9 @@
 2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+        * slabmode.cpp: Improve safe_mult heuristics.
+
+2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
         * slab.cpp: Fix TE_TM polarisation.
 	* slab.cpp: Lower precision.
 
